# noise

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac  noise.sln
CommandLineReferenceImplementation/: CommandLineReferenceImplementation.vcxproj  CommandLineReferenceImplementation.vcxproj.filters  main.cpp
NatPunchthroughServer/: NatPunchthroughServer.vcxproj  NatPunchthroughServer.vcxproj.filters  Network.cpp  Network.h  main.cpp
NoiseAPI/: NoiseAPI.cpp  NoiseAPI.h  NoiseAPI.vcxproj  NoiseAPI.vcxproj.filters
TestAPI/: main.cpp
daemon/: main.cpp
example_chat_client/: main.cpp
noise/: CLI.cpp  CLI.h  Crypto.cpp  Crypto.h  CryptoHelpers.cpp  CryptoHelpers.h  Envelope.cpp  Envelope.h  Exceptions.h  Fingerprint.cpp  Fingerprint.h  Globals.h  Helpers.cpp  Helpers.h  LocalNoiseInterface.cpp  LocalNoiseInterface.h  Log.cpp  Log.h  Message.cpp  Message.h  Messages.h  Network.cpp  Network.h  NoiseAPI.cpp  NoiseAPI.h  NoiseCallbacks.cpp  NoiseCallbacks.h  NoiseInterface.h  RandomHelpers.cpp  RandomHelpers.h  SymmetricKey.h  main.cpp  noise.vcxproj  noise.vcxproj.filters
